--- a/tdlgradle/src/main/res/layout/task_content_item.xml
+++ b/tdlgradle/src/main/res/layout/task_content_item.xml
@@ -2,22 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/tvHashtag"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="16sp" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvHashtag"
+            android:layout_alignLeft="@+id/bEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="12sp"/>
+
+        <ImageButton
+            android:id="@+id/bEdit"
+            android:layout_toLeftOf="@+id/bDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/abc_ic_menu_moreoverflow_normal_holo_light"/>
+        <ImageButton
+            android:id="@+id/bDelete"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/abc_ic_clear_holo_light"/>
+
+
+    </RelativeLayout>
 
 
 </LinearLayout>
