--- a/tdlgradle/src/main/res/layout/task_expandable_list_item.xml
+++ b/tdlgradle/src/main/res/layout/task_expandable_list_item.xml
@@ -2,13 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp" >
+    android:padding="16dp">
 
     <FrameLayout
         android:id="@+id/task_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <FrameLayout
         android:id="@+id/task_content"
