--- a/tdlgradle/src/main/res/layout/task_title_item.xml
+++ b/tdlgradle/src/main/res/layout/task_title_item.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp" >
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/task_title"
+        android:id="@+id/tvTaskTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
