--- a/tdlgradle/src/main/res/layout/task_content_item.xml
+++ b/tdlgradle/src/main/res/layout/task_content_item.xml
@@ -26,18 +26,23 @@
         <ImageButton
             android:id="@+id/bEdit"
             android:layout_toLeftOf="@+id/bDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_edit_archive"/>
+            <!--
             android:src="@drawable/abc_ic_menu_moreoverflow_normal_holo_light"/>
+            -->
         <ImageButton
             android:id="@+id/bDelete"
             android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_delete_archive"/>
+            <!--
             android:src="@drawable/abc_ic_clear_holo_light"/>
-
+            -->
 
     </RelativeLayout>
 
