@aaronte - Edited fonts to look more like the mockups

--- a/tdlgradle/src/main/res/layout/horizontal_calendar_item.xml
+++ b/tdlgradle/src/main/res/layout/horizontal_calendar_item.xml
@@ -11,7 +11,8 @@
         android:textSize="20sp"
         android:lines="1"
         android:textColor="#777"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-thin"/>
 
     <TextView
         android:id="@+id/tvDayNumber"
@@ -20,5 +21,7 @@
         android:textSize="40sp"
         android:lines="1"
         android:textColor="#777"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-thin"/>
+
 </LinearLayout>
