--- a/tdlgradle/src/main/res/layout/month_item.xml
+++ b/tdlgradle/src/main/res/layout/month_item.xml
@@ -11,5 +11,6 @@
         android:textSize="20sp"
         android:lines="1"
         android:gravity="right"
-        android:textColor="#777" />
+        android:textColor="#777"
+        android:fontFamily="sans-serif-thin"/>
 </LinearLayout>
