--- a/tdlgradle/src/main/res/layout/task_title_item.xml
+++ b/tdlgradle/src/main/res/layout/task_title_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-thin"/>
 
 </LinearLayout>
