--- a/tdlgradle/src/main/res/layout/task_content_item.xml
+++ b/tdlgradle/src/main/res/layout/task_content_item.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/tvHashtag"
-            android:layout_alignLeft="@+id/bEdit"
+            android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
@@ -30,9 +30,7 @@
             android:layout_height="24dp"
             android:layout_margin="5dp"
             android:background="@drawable/ic_edit_archive"/>
-            <!--
-            android:src="@drawable/abc_ic_menu_moreoverflow_normal_holo_light"/>
-            -->
+
         <ImageButton
             android:id="@+id/bDelete"
             android:layout_alignParentRight="true"
@@ -40,9 +38,6 @@
             android:layout_height="26dp"
             android:layout_margin="5dp"
             android:background="@drawable/ic_delete_archive"/>
-            <!--
-            android:src="@drawable/abc_ic_clear_holo_light"/>
-            -->
 
     </RelativeLayout>
 
