--- a/tdlgradle/src/main/res/layout/year_item.xml
+++ b/tdlgradle/src/main/res/layout/year_item.xml
@@ -7,9 +7,12 @@
     <TextView
         android:id="@+id/tvSimpleItem"
         android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:textSize="20sp"
+        android:layout_gravity="center"
         android:lines="1"
-        android:gravity="left"
-        android:textColor="#777" />
+        android:textColor="#000"
+        />
+
+
 </LinearLayout>
