--- a/tdlgradle/src/main/res/drawable-hdpi/layout_task_card.xml
+++ b/tdlgradle/src/main/res/drawable-hdpi/layout_task_card.xml
@@ -2,24 +2,24 @@
     <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
         <item>
             <shape android:shape="rectangle">
-                <solid android:color="#ffcccccc"/>
+                <solid android:color="@color/bg_gray"/>
             </shape>
         </item>
         <item
-            android:bottom="10dp"
+            android:bottom="0dp"
             android:left="10dp"
             android:right="10dp"
-            android:top="10dp">
+            android:top="0dp">
             <shape android:shape="rectangle">
                 <corners android:radius="1dp"/>
                 <solid android:color="#8C666666"/>
             </shape>
         </item>
         <item
-            android:bottom="12dp"
+            android:bottom="0dp"
             android:left="10dp"
             android:right="10dp"
-            android:top="10dp">
+            android:top="0dp">
             <shape android:shape="rectangle">
                 <corners android:radius="1dp"/>
                 <solid android:color="#ffffffff"/>
