--- a/tdlgradle/src/main/res/layout/activity_main.xml
+++ b/tdlgradle/src/main/res/layout/activity_main.xml
@@ -1,19 +1,63 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/wrap_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header_main"
+        android:padding="5dp"
+        android:background="@drawable/layout_calendar_card">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:paddingTop="10dp"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal"
+            android:id="@+id/yearMonthLayout"
+            android:layout_alignParentTop="true">
+
+            <antistatic.spinnerwheel.WheelHorizontalView
+                android:id="@+id/whvMonth"
+                app:visibleItems="1"
+                app:selectionDividerWidth="1px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <antistatic.spinnerwheel.WheelHorizontalView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/whvYear"
+                app:visibleItems="1"
+                app:selectionDividerWidth="1px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <antistatic.spinnerwheel.WheelHorizontalView
+            android:id="@+id/whvCalendar"
+            android:layout_below="@+id/yearMonthLayout"
+            app:visibleItems="7"
+            app:selectionDividerWidth="1px"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 
     <!-- Framelayout to display Fragments -->
     <FrameLayout
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <!-- Listview to display slider menu -->
     <ListView
         android:id="@+id/list_slidermenu"
-        android:layout_width="240dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
@@ -21,4 +65,5 @@
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector"
         android:background="@color/list_background"/>
+
 </android.support.v4.widget.DrawerLayout>
