--- a/tdlgradle/src/main/res/layout/expandable_item.xml
+++ b/tdlgradle/src/main/res/layout/expandable_item.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="4dp">
 
     <FrameLayout
         android:id="@+id/header_layout"
@@ -12,7 +12,7 @@
     <FrameLayout
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp" />
 
 </LinearLayout>
