--- a/tdlgradle/src/main/res/layout/activity_main.xml
+++ b/tdlgradle/src/main/res/layout/activity_main.xml
@@ -1,58 +1,24 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_drawer"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/abc_search_url_text_normal"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/wrap_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/header_main"
-        android:padding="5dp"
-        android:background="@drawable/layout_calendar_card">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:paddingTop="10dp"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal"
-            android:id="@+id/yearMonthLayout"
-            android:layout_alignParentTop="true">
-
-            <antistatic.spinnerwheel.WheelHorizontalView
-                android:id="@+id/whvMonth"
-                app:visibleItems="1"
-                app:selectionDividerWidth="1px"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <antistatic.spinnerwheel.WheelHorizontalView
-                android:layout_marginLeft="10dp"
-                android:id="@+id/whvYear"
-                app:visibleItems="1"
-                app:selectionDividerWidth="1px"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <antistatic.spinnerwheel.WheelHorizontalView
-            android:id="@+id/whvCalendar"
-            android:layout_below="@+id/yearMonthLayout"
-            app:visibleItems="7"
-            app:selectionDividerWidth="1px"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+    <!-- Framelayout to display Fragments -->
+    <FrameLayout
+        android:id="@+id/frame_calendar"
+        android:layout_width="fill_parent"
+        android:layout_height="500dp"
+        android:layout_above="@+id/frame_container"/>
 
     <!-- Framelayout to display Fragments -->
     <FrameLayout
         android:id="@+id/frame_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="500dp"
+        android:layout_below="@+id/frame_calendar"/>
 
     <!-- Listview to display slider menu -->
     <ListView
