--- a/tdlgradle/src/main/res/layout/fragment_calendar.xml
+++ b/tdlgradle/src/main/res/layout/fragment_calendar.xml
@@ -3,50 +3,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:weightSum="1"
     android:background="@color/counter_text_bg">
 
-    <RelativeLayout
-        android:id="@+id/wrap_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/header_main"
-        android:padding="5dp"
-        android:background="@drawable/layout_calendar_card">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:paddingTop="10dp"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal"
-            android:id="@+id/yearMonthLayout"
-            android:layout_alignParentTop="true">
+        <RelativeLayout
+            android:id="@+id/wrap_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/header_main"
+            android:padding="5dp"
+            android:background="@drawable/layout_calendar_card">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:paddingTop="10dp"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal"
+                android:id="@+id/yearMonthLayout"
+                android:layout_alignParentTop="true">
+
+                <antistatic.spinnerwheel.WheelHorizontalView
+                    android:id="@+id/whvMonth"
+                    app:visibleItems="1"
+                    app:selectionDividerWidth="1px"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <antistatic.spinnerwheel.WheelHorizontalView
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/whvYear"
+                    app:visibleItems="1"
+                    app:selectionDividerWidth="1px"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
             <antistatic.spinnerwheel.WheelHorizontalView
-                android:id="@+id/whvMonth"
-                app:visibleItems="1"
+                android:id="@+id/whvCalendar"
+                android:layout_below="@+id/yearMonthLayout"
+                app:visibleItems="7"
                 app:selectionDividerWidth="1px"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <antistatic.spinnerwheel.WheelHorizontalView
-                android:layout_marginLeft="10dp"
-                android:id="@+id/whvYear"
-                app:visibleItems="1"
-                app:selectionDividerWidth="1px"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <antistatic.spinnerwheel.WheelHorizontalView
-            android:id="@+id/whvCalendar"
-            android:layout_below="@+id/yearMonthLayout"
-            app:visibleItems="7"
-            app:selectionDividerWidth="1px"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+                android:layout_height="60dp"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
