--- a/tdlgradle/src/main/res/layout/fragment_home.xml
+++ b/tdlgradle/src/main/res/layout/fragment_home.xml
@@ -7,14 +7,14 @@
     android:weightSum="1">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.14">
 
     </LinearLayout>
     
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.86"
         android:paddingLeft="10dp"
@@ -24,8 +24,8 @@
 
         <ListView
             android:id="@+id/lvTasks"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:dividerHeight="5dp"
             android:divider="@color/bg_gray">
