Dates of incomplete past and future tasks are now highlighted on the calendar and is updated through callbacks.

--- a/tdlgradle/src/main/res/layout/fragment_home.xml
+++ b/tdlgradle/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
             android:id="@+id/etTaskTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/bAdd"
+            android:layout_toLeftOf="@+id/bAdd"
             android:singleLine="true"
             android:imeOptions="actionDone"
             android:textColor="@android:color/black"
